@@ -1,6 +1,6 @@
 Name:          	@PACKAGE_NAME@ 
 Version:        @BASEVERSION@@EXTRAVERSION@
-Release:        3 
+Release:        1 
 Summary:        AX.25 ham radio applications
 
 Group:          Applications/Communications
@@ -65,6 +65,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_localstatedir}/ax25/ax25rtd/*
 
 %changelog
+* Mon Sep 12 2011 Lee Woldanski <ve7fet@tparc.org> 1.0.2-1
+- Change ax25ipd to compile with -DTERMIO
+
 * Sat Aug 27 2011 Lee Woldanski <ve7fet@tparc.org> 1.0.1-3
 - Going to re-build the distro rpm on CentOS 6, so bumped the release
 
