@@ -16,7 +16,7 @@ ax25ipd_LDADD = $(AX25_LIB)
 AX25_SYSCONFDIR=$(sysconfdir)/ax25
 AX25_LOCALSTATEDIR=$(localstatedir)/ax25
 
-AM_CFLAGS = -DUSE_TERMIOS -pthread
+AM_CFLAGS = -DUSE_TERMIO -pthread
 
 AM_CPPFLAGS = -DAX25_SYSCONFDIR=\""$(AX25_SYSCONFDIR)"\" \
 	      -DAX25_LOCALSTATEDIR=\""$(AX25_LOCALSTATEDIR)"\" 
